2003-09-24  Frederic Crozat  <fcrozat@mandrakesoft.com>

	* src/Makefile.am:
	Fix parallel build.

2003-09-24  Frederic Crozat  <fcrozat@mandrakesoft.com>

	* Makefile.am:
	Remove intltool generated tools on distclean, not clean.

2003-09-16  Bastien Nocera  <hadess@hadess.net>

	* tests/mb-test.c: (metadata_cb), (main):
	Fix the test so that it works and compiles.

2003-09-16  Ross Burton  <ross@burtonini.com>

	* src/sj-metadata-musicbrainz.c:
	Fix a very stupid crash when not online, thanks to Frederic Crozat
	<fcrozat@mandrakesoft.com> for noticing.

	* NEWS:
	* configure.in:
	New release.

2003-09-16  Ross Burton  <ross@burtonini.com>

	* configure.in:
	Bump version number.

	* src/Makefile.am:
	Dist the marshal list.

	* tests/Makefile.am:
	Fix the mb-test compile

	* test/mb-test.c:
	Break the test so it compiles. Will fix soonish, honest.
	
2003-09-16  Ross Burton  <ross@burtonini.com>

	* NEWS:
	* TODO:
	Updates for upcoming 0.5.3.

	* src/sj-metadata-marshal.list:
	* src/Makefile.am:
	Define some custom marshals.

	* src/sj-metadata.[ch]:
	* src/sj-metadata-musicbrainz.c:
	* src/sj-main.c:
	Return the metadata in a signal, so that threaded lookups can be
	made. Patience young padwan.

2003-09-10  Ross Burton  <ross@burtonini.com>

	* src/sj-metadata-musicbrainz.c:
	Add g_strdup()s to avoid segfaults when editing track
	listings. Thanks to Mike Hearn.

2003-09-04  Bastien Nocera  <hadess@hadess.net>

	* data/sound-juicer.schemas.in:
	* src/sj-extracting.c: (filepath_parse_pattern): added %aA, %aT,
	%tT and %tA, the lowercase equivalents of %aa, %at, %tt and %ta
	so one can lowercase all his filenames and directory entries when
	ripping

2003-09-03  Ross Burton  <ross@burtonini.com>

	* src/sj-util.c:
	Handle unknown disk types as audio.

2003-09-03  Ross Burton  <ross@burtonini.com>

	* src/sj-util.c: Support FreeBSD CD-ROM ejecting (patch from Koop
	Mast <einekoai@chello.nl).

2003-09-03  Bastien Nocera  <hadess@hadess.net>

	* src/sj-main.c: (reread_cd):