@@ -1,3 +1,10 @@
+2003-09-24  Bastien Nocera  <hadess@hadess.net>
+
+	* src/sj-extractor.c: (sj_extractor_supports_encoding):
+	* src/sj-extractor.h:
+	* src/sj-main.c: (main): check for the cdparanoia plugin being present
+	(Closes: #123122)
+
 2003-09-24  Frederic Crozat  <fcrozat@mandrakesoft.com>
 
 	* src/Makefile.am:
